--- a/api/events/models/events.settings.json
+++ b/api/events/models/events.settings.json
@@ -38,11 +38,7 @@
     "image": {
       "model": "file",
       "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
+      "allowedTypes": ["images", "files", "videos"],
       "plugin": "upload",
       "required": false
     },
